examples/invalid/last.lama
[int] a ;
a = [int] [1,2,3];
double res = a.last();
print res;